@@ -28,23 +28,11 @@
 package org.hisp.dhis.tracker.export.trackedentity;
 
 import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.Map.entry;
 import static org.hisp.dhis.common.IdentifiableObjectUtils.getIdentifiers;
 import static org.hisp.dhis.commons.util.TextUtils.getCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getQuotedCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getTokens;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.CREATED_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.DELETED;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.INACTIVE_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.LAST_UPDATED_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.MAIN_QUERY_ALIAS;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.ORG_UNIT_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.ORG_UNIT_NAME;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.OrderColumn.ENROLLED_AT;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.OrderColumn.findColumn;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.POTENTIAL_DUPLICATE;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.PROGRAM_INSTANCE_ALIAS;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_ID;
-import static org.hisp.dhis.tracker.export.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_TYPE_ID;
 import static org.hisp.dhis.util.DateUtils.addDays;
 import static org.hisp.dhis.util.DateUtils.getLongGmtDateString;
 import static org.hisp.dhis.util.DateUtils.getMediumDateString;
@@ -53,7 +41,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -82,9 +70,10 @@ import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.setting.SettingKey;
 import org.hisp.dhis.setting.SystemSettingManager;
 import org.hisp.dhis.trackedentity.TrackedEntity;
+import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
+import org.hisp.dhis.tracker.export.Order;
 import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.util.DateUtils;
-import org.hisp.dhis.webapi.controller.event.mapper.OrderParam;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.rowset.SqlRowSet;
@@ -95,10 +84,19 @@ import org.springframework.stereotype.Repository;
 class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<TrackedEntity>
     implements TrackedEntityStore {
 
-  private static final String DEFAULT_ORDER = "TE.trackedentityid ASC";
+  private static final String MAIN_QUERY_ALIAS = "TE";
+
+  private static final String ENROLLMENT_ALIAS = "en";
+
+  private static final String DEFAULT_ORDER = MAIN_QUERY_ALIAS + ".trackedentityid desc";
+
   private static final String OFFSET = "OFFSET";
 
   private static final String LIMIT = "LIMIT";
+
+  private static final String ENROLLMENT_DATE_ALIAS = "en_enrollmentdate";
+
+  private static final String ENROLLMENT_DATE_KEY = "enrollment.enrollmentDate";
 
   private static final String EV_EXECUTIONDATE = "EV.executiondate";
 
@@ -116,11 +114,21 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
 
   private static final String EV_STATUS = "EV.status";
 
-  private static final String SELECT_COUNT_INSTANCE_FROM = "SELECT count(instance) FROM ( ";
+  private static final String SELECT_COUNT_INSTANCE_FROM = "SELECT count(trackedentityid) FROM ( ";
 
-  // -------------------------------------------------------------------------
-  // Dependencies
-  // -------------------------------------------------------------------------
+  /**
+   * Tracked entities can be ordered by given fields which correspond to fields on {@link
+   * org.hisp.dhis.trackedentity.TrackedEntity}. Maps fields to DB columns.
+   */
+  private static final Map<String, String> ORDERABLE_FIELDS =
+      Map.ofEntries(
+          entry("uid", "uid"),
+          entry("created", "created"),
+          entry("createdAtClient", "createdatclient"),
+          entry("lastUpdated", "lastupdated"),
+          entry("lastUpdatedAtClient", "lastupdatedatclient"),
+          entry(ENROLLMENT_DATE_KEY, ENROLLMENT_DATE_ALIAS),
+          entry("inactive", "inactive"));
 
   private final OrganisationUnitStore organisationUnitStore;
 
@@ -155,22 +163,18 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     this.systemSettingManager = systemSettingManager;
   }
 
-  // -------------------------------------------------------------------------
-  // Implementation methods
-  // -------------------------------------------------------------------------
-
   @Override
   public List<Long> getTrackedEntityIds(TrackedEntityQueryParams params) {
     String sql = getQuery(params);
     log.debug("Tracked entity query SQL: " + sql);
     SqlRowSet rowSet = jdbcTemplate.queryForRowSet(sql);
 
-    checkMaxTeiCountReached(params, rowSet);
+    checkMaxTrackedEntityCountReached(params, rowSet);
 
     List<Long> ids = new ArrayList<>();
 
     while (rowSet.next()) {
-      ids.add(rowSet.getLong("teId"));
+      ids.add(rowSet.getLong("trackedentityid"));
     }
 
     return ids;
@@ -183,7 +187,8 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
             .collect(Collectors.toList()));
   }
 
-  private void checkMaxTeiCountReached(TrackedEntityQueryParams params, SqlRowSet rowSet) {
+  private void checkMaxTrackedEntityCountReached(
+      TrackedEntityQueryParams params, SqlRowSet rowSet) {
     if (params.getMaxTeLimit() > 0 && rowSet.last()) {
       if (rowSet.getRow() > params.getMaxTeLimit()) {
         throw new IllegalQueryException("maxteicountreached");
@@ -200,8 +205,8 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   }
 
   @Override
-  public int getTrackedEntityCountForWithMaxTeiLimit(TrackedEntityQueryParams params) {
-    String sql = getCountQueryWithMaxTeiLimit(params);
+  public int getTrackedEntityCountWithMaxTrackedEntityLimit(TrackedEntityQueryParams params) {
+    String sql = getCountQueryWithMaxTrackedEntityLimit(params);
     log.debug("Tracked entity count SQL: " + sql);
     return jdbcTemplate.queryForObject(sql, Integer.class);
   }
@@ -267,9 +272,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     }
 
     StringBuilder stringBuilder = new StringBuilder(getQuerySelect(params));
-
     return stringBuilder
-        .append(", TE.trackedentityid AS teId ")
         .append("FROM ")
         .append(getFromSubQuery(params, false))
         .append(getQueryRelatedTables(params))
@@ -300,7 +303,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    * @param params params defining the query
    * @return a count SQL query
    */
-  private String getCountQueryWithMaxTeiLimit(TrackedEntityQueryParams params) {
+  private String getCountQueryWithMaxTrackedEntityLimit(TrackedEntityQueryParams params) {
     return SELECT_COUNT_INSTANCE_FROM
         + getQuerySelect(params)
         + "FROM "
@@ -321,22 +324,28 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     LinkedHashSet<String> select =
         new LinkedHashSet<>(
             List.of(
-                "SELECT TE.uid AS " + TRACKED_ENTITY_ID,
-                "TE.created AS " + CREATED_ID,
-                "TE.lastupdated AS " + LAST_UPDATED_ID,
-                "TE.ou AS " + ORG_UNIT_ID,
-                "TE.ouname AS " + ORG_UNIT_NAME,
-                "TET.uid AS " + TRACKED_ENTITY_TYPE_ID,
-                "TE.inactive AS " + INACTIVE_ID,
-                "TE.potentialduplicate AS " + POTENTIAL_DUPLICATE,
-                params.isIncludeDeleted() ? "TE.deleted AS " + DELETED : ""));
+                "TE.trackedentityid",
+                "TE.uid",
+                "TE.created",
+                "TE.lastupdated",
+                "TE.inactive",
+                "TE.potentialduplicate",
+                "TE.deleted",
+                "TE.orgunit_uid",
+                "TE.orgunit_name",
+                "TE.trackedentitytypeid"));
 
-    params.getOrders().stream()
-        .map(o -> findColumn(o.getField()))
-        .filter(Optional::isPresent)
-        .forEach(c -> select.add(c.get().getSqlColumnWithMainTable()));
+    // all orderable fields are already in the select. Only when ordering by enrollment date do we
+    // need to add a column, so we can order by it
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field && ENROLLMENT_DATE_KEY.equals(field)) {
+        select.add(ENROLLMENT_DATE_ALIAS);
+      }
+    }
 
-    return select.stream().filter(c -> !c.isEmpty()).collect(Collectors.joining(", ")) + SPACE;
+    return "select "
+        + select.stream().filter(c -> !c.isEmpty()).collect(Collectors.joining(", "))
+        + SPACE;
   }
 
   /**
@@ -351,7 +360,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
         new StringBuilder()
             .append("(")
             .append(getFromSubQuerySelect(params))
-            .append(" FROM trackedentity TE ")
+            .append(" FROM trackedentity " + MAIN_QUERY_ALIAS + " ")
 
             // INNER JOIN on constraints
             .append(getFromSubQueryJoinAttributeConditions(params))
@@ -370,7 +379,6 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
       // SORT
       fromSubQuery
           .append(getQueryOrderBy(params, true))
-
           // LIMIT, OFFSET
           .append(getFromSubQueryLimitAndOffset(params));
     }
@@ -388,31 +396,44 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     LinkedHashSet<String> columns =
         new LinkedHashSet<>(
             List.of(
-                "TE.trackedentityid",
-                "TE.uid",
-                "TE.created",
-                "TE.lastupdated",
-                "TE.inactive",
-                "TE.trackedentitytypeid",
-                "TE.potentialduplicate",
-                "TE.deleted",
-                "OU.uid as ou",
-                "OU.name as ouname "));
+                "TE.trackedentityid as trackedentityid",
+                "TE.trackedentitytypeid as trackedentitytypeid",
+                "TE.uid as uid",
+                "TE.created as created",
+                "TE.lastupdated as lastupdated",
+                "TE.inactive as inactive",
+                "TE.potentialduplicate as potentialduplicate",
+                "TE.deleted as deleted",
+                "OU.uid as orgunit_uid",
+                "OU.name as orgunit_name"));
 
-    for (OrderParam orderParam : params.getOrders()) {
-      Optional<TrackedEntityQueryParams.OrderColumn> orderColumn =
-          findColumn(orderParam.getField());
-
-      if (orderColumn.isPresent()) {
-        columns.add(orderColumn.get().getSqlColumnWithTableAlias());
-      } else {
-        if (sortableAttributesAndFilters(params).stream()
-            .anyMatch(i -> i.getItem().getUid().equals(orderParam.getField()))) {
-          columns.add(
-              statementBuilder.columnQuote(orderParam.getField())
-                  + ".value AS "
-                  + statementBuilder.columnQuote(orderParam.getField()));
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field) {
+        if (!ORDERABLE_FIELDS.containsKey(field)) {
+          throw new IllegalArgumentException(
+              String.format(
+                  "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                  field, String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
         }
+
+        // all orderable fields are already in the select
+        if (ENROLLMENT_DATE_KEY.equals(field)) {
+          columns.add(ENROLLMENT_ALIAS + ".enrollmentdate as " + ENROLLMENT_DATE_ALIAS);
+        }
+      } else if (order.getField() instanceof TrackedEntityAttribute tea) {
+        if (sortableAttributesAndFilters(params).stream()
+            .anyMatch(i -> i.getItem().getUid().equals(tea.getUid()))) {
+          columns.add(
+              statementBuilder.columnQuote(tea.getUid())
+                  + ".value AS "
+                  + statementBuilder.columnQuote(tea.getUid()));
+        }
+      } else {
+        throw new IllegalArgumentException(
+            String.format(
+                "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                order.getField(),
+                String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
       }
     }
 
@@ -422,7 +443,10 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
   /** Get a set of QueryItem that contains sortable attributes also defined as filers */
   private Set<QueryItem> sortableAttributesAndFilters(TrackedEntityQueryParams params) {
     List<String> ordersIdentifier =
-        params.getOrders().stream().map(OrderParam::getField).collect(Collectors.toList());
+        params.getOrder().stream()
+            .filter(o -> o.getField() instanceof TrackedEntityAttribute)
+            .map(o -> ((TrackedEntityAttribute) o.getField()).getUid())
+            .toList();
     return params.getAttributesAndFilters().stream()
         .filter(queryItem -> ordersIdentifier.contains(queryItem.getItemId()))
         .collect(Collectors.toSet());
@@ -578,9 +602,7 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
     StringBuilder attributes = new StringBuilder();
 
     List<QueryItem> filterItems =
-        params.getAttributesAndFilters().stream()
-            .filter(QueryItem::hasFilter)
-            .collect(Collectors.toList());
+        params.getAttributesAndFilters().stream().filter(QueryItem::hasFilter).toList();
 
     for (QueryItem queryItem : filterItems) {
       String col = statementBuilder.columnQuote(queryItem.getItemId());
@@ -719,11 +741,13 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    * @return a SQL INNER JOIN for enrollments
    */
   private String getFromSubQueryJoinEnrollmentConditions(TrackedEntityQueryParams params) {
-    if (params.getOrders().stream().anyMatch(p -> ENROLLED_AT.isPropertyEqualTo(p.getField()))) {
+    if (params.getOrder().stream()
+        .filter(o -> o.getField() instanceof String)
+        .anyMatch(p -> ENROLLMENT_DATE_KEY.equals(p.getField()))) {
       return " INNER JOIN enrollment "
-          + PROGRAM_INSTANCE_ALIAS
+          + ENROLLMENT_ALIAS
           + " ON "
-          + PROGRAM_INSTANCE_ALIAS
+          + ENROLLMENT_ALIAS
           + "."
           + "trackedentityid"
           + "= TE.trackedentityid ";
@@ -998,24 +1022,29 @@ class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<Tracked
    */
   private String getQueryOrderBy(TrackedEntityQueryParams params, boolean innerOrder) {
     List<String> orderFields = new ArrayList<>();
-    for (OrderParam order : params.getOrders()) {
-      Optional<TrackedEntityQueryParams.OrderColumn> orderColumn = findColumn(order.getField());
+    for (Order order : params.getOrder()) {
+      if (order.getField() instanceof String field) {
+        if (!ORDERABLE_FIELDS.containsKey(field)) {
+          throw new IllegalArgumentException(
+              String.format(
+                  "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                  field, String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
+        }
 
-      if (orderColumn.isPresent()) {
+        orderFields.add(ORDERABLE_FIELDS.get(field) + " " + order.getDirection());
+      } else if (order.getField() instanceof TrackedEntityAttribute tea) {
         String orderField =
             innerOrder
-                ? orderColumn.get().getSqlColumnWithTableAlias()
-                : orderColumn.get().getSqlColumnWithMainTable();
+                ? statementBuilder.columnQuote(tea.getUid()) + ".value "
+                : MAIN_QUERY_ALIAS + "." + statementBuilder.columnQuote(tea.getUid());
 
         orderFields.add(orderField + SPACE + order.getDirection());
-      } else if (sortableAttributesAndFilters(params).stream()
-          .anyMatch(i -> i.getItem().getUid().equals(order.getField()))) {
-        String orderField =
-            innerOrder
-                ? statementBuilder.columnQuote(order.getField()) + ".value "
-                : MAIN_QUERY_ALIAS + "." + statementBuilder.columnQuote(order.getField());
-
-        orderFields.add(orderField + SPACE + order.getDirection());
+      } else {
+        throw new IllegalArgumentException(
+            String.format(
+                "Cannot order by '%s'. Supported are tracked entity attributes and fields '%s'.",
+                order.getField(),
+                String.join(", ", ORDERABLE_FIELDS.keySet().stream().sorted().toList())));
       }
     }
 
